// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/TooltipBase/Title should renders correctly 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFF",
        "fontFamily": "Inter-SemiBold",
        "fontSize": 14,
        "lineHeight": 18,
        "minHeight": 18,
      },
      [
        {
          "zIndex": 1,
        },
        undefined,
      ],
    ]
  }
>
  title
</Text>
`;

exports[`@lad-tech/mobydick-core/TooltipBase/Title should renders correctly font 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#20242D",
        "fontFamily": "Inter-Regular",
        "fontSize": 14,
        "lineHeight": 18,
        "minHeight": 18,
      },
      [
        {
          "zIndex": 1,
        },
        {
          "width": 100,
        },
      ],
    ]
  }
>
  title
</Text>
`;
